--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,18 +1,53 @@
 name: NASA Project CI
+
 on:
   push:
     branches: [ master ]
-  pull_request :
+  pull_request:
     branches: [ master ]
+
 jobs:
   build:
+    env:
+      CI: true
+      MONGO_URL: mongodb://localhost:27017/nasa  # Updated MongoDB connection string
+
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x]   # Test with Node.js versions 14 and 16
+
     runs-on: ubuntu-latest
+
+    services:
+      mongodb:
+        image: mongo:4.4           # Official MongoDB Docker image
+        ports:
+          - 27017:27017           # Map the container's MongoDB port to the host
+        options: >-
+          --health-cmd="mongosh --eval 'db.adminCommand(\"ping\")'"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js version 20
-      uses: actions/setup-node@v2  
-      with:
-        node-version: '20'
-    - run: npm install
-    - run: npm run build --prefix client    
-      
+      # Step 1: Checkout the repository
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      # Step 2: Set up Node.js
+      - name: Use Node.js version ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      # Step 3: Install project dependencies
+      - name: Install Dependencies
+        run: npm install
+
+      # Step 4: Build the project
+      - name: Build Project
+        run: npm run build --prefix client
+
+      # Step 5: Run Tests
+      - name: Run Tests
+        run: npm test
